# CHANGELOG

**Jan.18.2025:** Secure cookie encoding. Add gunicorn to dependancies.