@@ -109,6 +109,31 @@
                 </li>
             {% endfor %}
         </ul>
+        <div>
+            <input type="text" id="ticketIdInput" placeholder="Enter Ticket ID">
+            <button onclick="closeTicket()">Close Ticket</button>
+        </div>
+        
+        <script>
+        function closeTicket() {
+            let ticketId = document.getElementById("ticketIdInput").value.trim();
+        
+            if (!ticketId) {
+                alert("Please enter a valid Ticket ID.");
+                return;
+            }
+        
+            fetch('/close_ticket/' + ticketId, {
+                method: 'POST'
+            })
+            .then(response => response.json())
+            .then(data => {
+                alert(data.message);
+                location.reload();  // Refresh dashboard after closing ticket
+            })
+            .catch(error => console.error('Error:', error));
+        }
+        </script>
         <a href="{{ url_for('logout') }}" class="logout-btn">Logout</a>
         <p class="footer-text">©2025 GoobyDesk, a BlueBotPC platform. All rights reserved.</p>
     </div>
